[lib]
name = 'tcpwarp'

[package]
name = 'tcp-warp'
version = '0.3.0'
authors = ['Alexander Korolev <kilork@yandex.ru>']
edition = '2018'
description = '''
A userspace tunnel between two hosts mapping ports on client
machine to addresses reachable from server machine
'''
homepage = 'https://github.com/tcp-warp/tcp-warp'
keywords = [
    'tcp',
    'tunnel',
    'protocol',
    'proxy',
]
license = 'Unlicense OR MIT'
readme = 'README.md'
repository = 'https://github.com/tcp-warp/tcp-warp'
categories = ['network-programming']
[badges.appveyor]
repository = 'https://github.com/tcp-warp/tcp-warp'
branch = 'master'
service = 'github'

[badges.travis-ci]
repository = 'https://github.com/tcp-warp/tcp-warp'
branch = 'master'

[badges.maintenance]
status = 'actively-developed'

[dependencies]
async-shutdown = '0.1.2'
bytes = '1'
futures = '0.3'
log = '0.4'

[dependencies.uuid]
version = '1'
features = ['v4']

[dependencies.tokio]
version = '1'
features = [
    'net',
    'io-util',
    'rt',
    'sync',
    'time',
]

[dependencies.tokio-stream]
version = "0.1"

[dependencies.tokio-util]
version = '0.7'
features = ['codec']
